# nubscript

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  THANKS  configure  configure.ac  nubscript.sln
examples/add_new_api/: ReadMe.txt  add_new_api.vcxproj  main.cc
nubscalc/: Makefile.am  Makefile.in  ReadMe.txt  main.cc  nubscalc.vcxproj  nubscalc.vcxproj.filters  stdafx.cpp
nubscli/: Makefile.am  Makefile.in  ReadMe.txt  main.cc  nu_builtin_help.cc  nu_builtin_help.h  nubscli.vcxproj
nubscript/: Makefile.am  Makefile.in  nu_about.h  nu_base_tknzr.h  nu_basic_defs.h  nu_cpp_lang.h  nu_error_codes.cc  nu_error_codes.h  nu_eval_expr.cc  nu_eval_expr.h  nu_exception.h  nu_expr_any.h  nu_expr_bin.h  nu_expr_empty.h  nu_expr_function.cc  nu_expr_function.h  nu_expr_literal.h  nu_expr_parser.cc  nu_expr_parser.h  nu_expr_subscrop.cc  nu_expr_subscrop.h  nu_expr_syntax_tree.cc  nu_expr_syntax_tree.h  nu_expr_tknzr.cc  nu_expr_tknzr.h  nu_expr_unary_op.cc  nu_expr_unary_op.h  nu_expr_var.cc  nu_expr_var.h  nu_file_dscrptr_tbl.cc  nu_file_dscrptr_tbl.h  nu_flag_map.h  nu_for_loop_rtdata.cc  nu_for_loop_rtdata.h  nu_generic_functor.h  nu_global_function_tbl.cc  nu_global_function_tbl.h  nu_hxxx_api.cc  nu_hxxx_api.h  nu_icstring.cc  (+140 more)
nubscriptwin/: ReadMe.txt  config.h  nubscriptwin.vcxproj  nubscriptwin.vcxproj.filters
